--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -66,7 +66,14 @@
                 <div class="gridHeaderItem">Reading</div>
                 <div class="gridHeaderItem">Science</div>
             </div>
-            <div class="addRemove" onclick="addGeneralInfoGoalRow()">+</div>
+
+            <div class="dropdown">
+                <button class="dropbtn addRemove">+</button>
+                <div class="dropdown-content">
+                    <div onclick="addGeneralInfoGoalRow()">add goal</div>
+                </div>
+            </div>
+            
             <div class="addRemove" onclick="removeGeneralInfoGoalRow()">-</div>
         </div>
     </section>
