Chart and What to teach

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -137,8 +137,11 @@
                 </div>
     
                 <div class='bigButtons'>
-                    <button class='item itemB1 cursor'>
-                        What If...?
+                    <button class='item itemB1 input-row'>
+                        <div id = 'box0' class = 'sectionBox'></div>
+                        <div id = 'box1' class = 'sectionBox'></div>
+                        <div id = 'box2' class = 'sectionBox'></div>
+                        <div id = 'box3' class = 'sectionBox'></div>
                     </button>
                     <button id = 'submitSession' onclick = "submitSession()" class='item itemB2 cursor'>
                         Submit Session
