a bunch of stuff

--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -67,6 +67,7 @@
                 <option value="subjectTutoring">Subject Tutoring</option>
                 <option value="mathProgram">Math Program</option>
                 <option value="phonicsProgram">Phonics Program</option>
+                <option value="inactive">Inactive</option>
               </select>
             </div>
           </div>
