--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -253,6 +253,7 @@
         <button id="subjectTutoringNav" class="button">Subject Tutoring</button>
         <button id="mathProgramNav" class="button">Math Program</button>
         <button id="phonicsProgramNav" class="button">Phonics Program</button>
+        <button id="registrationNav" class="button">Registration</button>
     </section>
 
     <section>
@@ -265,13 +266,19 @@
       <div class="flex-row align-center">
         <button class="button" onclick="goToInquiry()">Inquiry</button>
         <button class="button" onclick="openModal('tutor')">Add Tutor</button>
-        <button class="button" onclick="openModal('secretary')">Add Secretary</button>
+        <!-- <button class="button" onclick="openModal('secretary')">Add Secretary</button> -->
         <button class="button" onclick="openModal('school')">Add School</button>
         <button class="button" onclick="openModal('extracurricular')">Add Extracurricular</button>
         <button class="button" onclick="resetPassword()">reset password</button>
       </div>
 
       <div>
+        <div id="tableSelectorWrapper">
+          <input type="radio" onchange="setActiveStudentTable()" value="active" name="tableType" checked>Active</input>
+          <input type="radio" onchange="setInactiveStudentTable()" value="inactive" name="tableType">Inactive</input>
+          <input type="radio" onchange="setAllStudentTable()" value="all" name="tableType">All</input>
+        </div>
+
         <table id="student-table" class="display" width="100%">
           <thead>
             <tr>
@@ -286,12 +293,12 @@
       
 
       <!-- feedback area -->
-      <div style="margin: 25px;">
+      <!-- <div style="margin: 25px;">
         <h3>Feedback</h3>
         <textarea id="feedback_input" class="feedback_input" placeholder="any feedback?"></textarea>
         <p id="feedback_error_msg"></p>
         <button id="feedback_submit_btn" class="button" onclick="submitFeedback()">Submit</button>
-      </div>
+      </div> -->
 
     </section>
   </body>
