finishing up the table

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -94,6 +94,16 @@
         </div>
     </section>
 
+    <!-- <section id="customConfirmationSection">
+        <div class="confirmationContainer">
+            <div id="customConfirmationMessage"></div>
+            <div class="optionsContainer">
+                <div id="customConfirmationOptionOne"></div>
+                <div id="customConfirmationOptionTwo"></div>
+            </div>
+        </div>
+    </section> -->
+
     <section id = 'topNavigationBanner'>
         <img id = 'logo' src='../../Images/Wasatch Logo.png' onclick="goToDashboard()">
     </section>
