a bunch of stuff

--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -30,7 +30,7 @@
     </section>
     <section id="registration_section">
 
-      <div id="header" class="heading-block">
+      <!-- <div id="header" class="heading-block">
         <div class="wrapper">	
           <div class="arrow-steps">
             <div id="required" class="step current" onclick="changeRegistrationBlock(this)"> <span> Required</span> </div>
@@ -40,7 +40,7 @@
             <div id="admin" class="step" onclick="changeRegistrationBlock(this)"> <span>Admin</span> </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
       <!-------------------------->
