--- a/public/subject-tutoring-dash.html
+++ b/public/subject-tutoring-dash.html
@@ -28,19 +28,26 @@
   </section>
 
   <div id="student-general-info">
-    <h1 id="student-name"></h1>
-    <textarea id="student-expectation" class="expectation-input" disabled></textarea>
+    <div style="padding: 5px;">
+      <h1 id="student-name" style="margin: 0px;"></h1>
+      <textarea id="student-expectation" class="expectation-input" disabled></textarea>
+    </div>
+    <div style="position: relative; height: 100px;">
+      <img src="../../Images/blank-profile-picture.png" id="studentProfilePic" style = 'object-fit: cover;'>
+      <label id = 'fileLabel' for="fileInput"><img src = 'https://www.vhv.rs/dpng/d/439-4390267_edit-modify-ico-edit-pencil-icon-png-transparent.png' height = '20px'></label>
+      <input type = 'file' id ='fileInput' style = 'display: none;'>
+    </div>
   </div>
 
   <div class="flexRow">
     <div id="generalStudentMessageDiv">
-      <h2 class="studentMessageLabel backgroundBlack">Notes</h2>
+      <h2 class="studentMessageLabel">Notes</h2>
       <div id="generalStudentMessages" class="studentMessages"></div>
       <textarea id="generalStudentMessagesInput" class="studentMessagesInput" placeholder="Any notes?"></textarea>
     </div>
   
     <div id="gradesContainer">
-      <h2 class="studentMessageLabel backgroundBlack">Grades and Missing Assignments</h2>
+      <h2 class="studentMessageLabel">Grades and Missing Assignments</h2>
       <div class="scrollable-table">
         <table class="table table-striped table-header-rotated">
           <thead>
