--- a/public/math-program.html
+++ b/public/math-program.html
@@ -38,7 +38,7 @@
           <li>Yellow : Proficient</li>
           <li>Green : Mastered</li>
         </ul>
-        <li>Quick hint! If you click on "Math Program" over there to the left, it will send you to Khan academy for the selected program grade. Pretty sweet huh?</li>
+        <li>Quick hint! If you click on "Math Program" over there to the right, it will send you to Khan academy for the selected program grade. Pretty sweet huh?</li>
         <li>We have forms to send home after every lesson with the student to tell the parent what we worked on in center. That way if the student wants to practice at home they know what lessons to go over.</li>
       </ol>
     </div>
