add remove staff fixes

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -130,12 +130,12 @@
         <div id="form-scroll-block">
           <div id="spinnyBoiAdmin" class="loader"></div>
           <form onsubmit="return false">
-            <div class="input-block">
+            <!-- <div class="input-block">
               <label for="adminLocation" class="label">Wasatch Location:</label>
               <select id="adminLocation" class="select" required>
                 <option selected disabled value="">select a location</option>
               </select>
-          </div>
+            </div> -->
             <div class="input-row">
               <div class="input-block">
                   <label for="adminFirstName" class="label">Admin First Name:</label>
