clean up random bugs

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -87,7 +87,7 @@
           <div>Type</div>
           <div class="dropdown-content">
             <select id="typeFilterContent" class="ui dropdown search selection">
-              <option value="">select a type</option>
+              <option value="">select a location first</option>
               <option value="act">ACT</option>
               <option value="availability">Availability</option>
               <option value="conference">Conference</option>
@@ -125,7 +125,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddTeacherMeeting()" class="button">submit</button>
         </div>
       </div>
@@ -152,7 +152,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditTeacherMeeting()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -184,7 +184,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddGeneralInfo()" class="button">submit</button>
         </div>
       </div>
@@ -215,7 +215,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditGeneralInfo()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -247,7 +247,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddPracticeTest()" class="button">submit</button>
         </div>
       </div>
@@ -278,7 +278,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditPracticeTest()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -310,7 +310,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddConference()" class="button">submit</button>
         </div>
       </div>
@@ -341,7 +341,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditConference()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -373,7 +373,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddTestReview()" class="button">submit</button>
         </div>
       </div>
@@ -404,7 +404,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditTestReview()" class="button">update</button>
           <button onclick="deleteEventCallback()" class="button danger">delete</button>
         </div>
@@ -457,7 +457,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddLesson()" class="button">submit</button>
         </div>
       </div>
@@ -496,7 +496,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelEditCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="updateEditLesson()" class="button">update</button>
           <!-- <button onclick="deleteEventCallback()" class="button danger">delete</button> -->
           <div class="dropdown">
@@ -533,7 +533,7 @@
 
         <!-- buttons -->
         <div class="bottom">
-          <button onclick="cancelSidebarCallback()" class="button">cancel</button>
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddAvailability()" class="button">submit</button>
         </div>
       </div>
