--- a/public/calendar.html
+++ b/public/calendar.html
@@ -43,16 +43,21 @@
 
   <!-- Calendar Nav -->
   <div class="calendarNav">
+    <div class="dropdown" id="calendarType">
+      <button class="dropbtn">select calendar type</button>
+      <div class="dropdown-content">
+      </div>
+    </div>
+
     <div class="dropdown" id="calendarLocation">
       <button class="dropbtn">select location</button>
       <div class="dropdown-content">
       </div>
     </div>
 
-    <div class="dropdown">
+    <div class="dropdown type-event" style="display: none;">
       <button class="dropbtn">add event</button>
       <div class="dropdown-content">
-        <div onclick="setupAddSidebar('availability')">Availability</div>
         <div onclick="setupAddSidebar('conference')">Conference</div>
         <div onclick="setupAddSidebar('generalInfo')">General Info</div>
         <div onclick="setupAddSidebar('lesson')">Lesson</div>
@@ -62,7 +67,7 @@
       </div>
     </div>
 
-    <div class="dropdown">
+    <div class="dropdown type-event" style="display: none;">
       <button id="filterSelection" class="dropbtn">filter events</button>
       <div class="dropdown-content">
         <div class="dropdown-right">
@@ -89,7 +94,6 @@
             <select id="typeFilterContent" class="ui dropdown search selection">
               <option value="">select a location first</option>
               <option value="act">ACT</option>
-              <option value="availability">Availability</option>
               <option value="conference">Conference</option>
               <option value="generalInfo">General Info</option>
               <option value="mathProgram">Math Program</option>
@@ -101,7 +105,30 @@
           </div>
         </div>
 
-        <div onclick="clearFilter()">Clear filter</div>
+        <div onclick="clearFilter(true)">Clear filter</div>
+      </div>
+    </div>
+
+    <div class="dropdown type-availability" style="display: none;">
+      <button class="dropbtn">add availability</button>
+      <div class="dropdown-content">
+        <div onclick="setupAddSidebar('availability')">Availability</div>
+      </div>
+    </div>
+
+    <div class="dropdown type-availability" style="display: none;">
+      <button id="availabilitySelection" class="dropbtn">filter availability</button>
+      <div class="dropdown-content">
+        <div class="dropdown-right">
+          <div>Tutor</div>
+          <div class="dropdown-content">
+            <select id="tutorAvailabilityContent" class="ui dropdown search selection" multiple>
+              <option value="">select location first</option>
+            </select>
+          </div>
+        </div>
+        
+        <div onclick="clearAvailabilityFilter(true)">Clear filter</div>
       </div>
     </div>
   </div>
@@ -535,6 +562,30 @@
         <div class="bottom">
           <button onclick="closeCalendarSidebar()" class="button">cancel</button>
           <button onclick="submitAddAvailability()" class="button">submit</button>
+        </div>
+      </div>
+
+      <!----------------------------->
+      <!----- edit availability ----->
+      <!----------------------------->
+      <div id="editAvailabilityWrapper" class="sidebarContent displayNone">
+        <div class="more-info " data-more-info="Drag the event to change its time or pull down on the botton to change its length.">?</div>
+        <h3>Edit Availability</h3>
+        <div class="headerLine"></div>
+
+        <!-- tutor availability -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="This is the tutor with this availability">?</div>
+          <label for="editAvailabilityTutor" class="label">Tutor</label>
+        </div>
+        <div id="editAvailabilityTutor" name="editAvailabilityTutor" class="input nonEditable"></div>
+        <br>
+
+        <!-- buttons -->
+        <div class="bottom">
+          <button onclick="closeCalendarSidebar()" class="button">cancel</button>
+          <!-- <button onclick="updateEditAvailability()" class="button">update</button> -->
+          <!-- <button onclick="deleteEventCallback()" class="button danger">delete</button> -->
         </div>
       </div>
 
