bring the inquiry back

--- a/public/inquiry.html
+++ b/public/inquiry.html
@@ -30,7 +30,7 @@
     </section>
     <section id="registration_section">
 
-      <!-- <div id="header" class="heading-block">
+      <div id="header" class="heading-block">
         <div class="wrapper">	
           <div class="arrow-steps">
             <div id="required" class="step current" onclick="changeRegistrationBlock(this)"> <span> Required</span> </div>
@@ -40,7 +40,7 @@
             <div id="admin" class="step" onclick="changeRegistrationBlock(this)"> <span>Admin</span> </div>
           </div>
         </div>
-      </div> -->
+      </div>
 
 
       <!-------------------------->
@@ -52,7 +52,7 @@
           <div class="input-row">
             <!-- Wasatch Location -->
             <div class="input-block">
-                <label for="location" class="label">Wasatch Location</label>
+                <label for="location" class="label">Lyrn Location</label>
                 <div class="more-info" data-more-info="The primary wasatch location this student will be attending.">?</div>
                 <select id="location" class="input location-data" required>
                   <option selected disabled value="">select a location</option>
