starting off on staff registration

--- a/public/Dashboard/Admin.html
+++ b/public/Dashboard/Admin.html
@@ -339,7 +339,8 @@
 
       <div class="flex-row align-center">
         <button class="button" onclick="goToInquiry()">Inquiry</button>
-        <button class="button" onclick="openModal('tutor')">Add Tutor</button>
+        <!-- <button class="button" onclick="openModal('tutor')">Add Tutor</button> -->
+        <button class="button" onclick="goToStaffRegistration()">Add Tutor</button>
         <button class="button" onclick="openModal('admin')">Add Admin</button>
         <button class="button" onclick="openModal('location')">Add Location</button>
         <!-- <button class="button" onclick="openModal('secretary')">Add Secretary</button> -->
